--- a/params/mpu9250.yaml
+++ b/params/mpu9250.yaml
@@ -1,6 +1,7 @@
 mpu9250driver_node:
   ros__parameters:
     calibrate: True
+    covariance: True
     # Gyroscope range: 0 -> +-250°/s, 1 -> +-500°/s, 2 -> +-1000°/s, 3 -> +-2000°/s
     gyro_range: 0
     # Acceleration range: 0 -> +-2g, 1 -> +-4g, 2 -> +-8g, 3 -> +-16g
